Fixed auth service and security configuration